--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>PWA</title>
-   <link rel="favicon" href="images/pwa72.png">
+   <link rel="favicon" href="images/eclipse72.png">
     <link rel="manifest" href="/manifest.json">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
