--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>PWA</title>
    <link rel="favicon" href="images/eclipse72.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
